--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,12 +1,10 @@
-ARG NODE_VERSION=24.0.1
-
-FROM node:${NODE_VERSION}-slim AS frontend_build
+FROM node:20-alpine3.22 AS builder
 
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
 COPY tsconfig.base.json ./
-COPY shared/pong ./shared/pong
+COPY shared/ ./shared/
 COPY frontend ./frontend
 
 RUN npm install --omit=dev
@@ -23,8 +21,6 @@ RUN openssl req -x509 -nodes \
 	-subj "/C=NL/ST=Noord-Holland/L=Amsterdam/O=Chey/OU=Unit1/CN=cschabra.42.fr/UID=cschabra" \
 	-out /etc/nginx/ssl/new.crt \
 	-keyout /etc/nginx/ssl/new.key
-
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 COPY --from=builder /app/frontend/dist /usr/share/nginx/html
 COPY frontend/nginx.conf /etc/nginx/nginx.conf
