--- a/backend/userManagement/package.json
+++ b/backend/userManagement/package.json
@@ -15,7 +15,8 @@
     "@fastify/jwt": "^9.1.0",
     "@fastify/multipart": "^9.0.3",
     "better-sqlite3": "^11.10.0",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "zod": "^3.25.73"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
