--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "@biomejs/biome": "^1.9.4",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "zod": "^3.25.76"
   }
 }
