--- a/backend/user_management/package.json
+++ b/backend/user_management/package.json
@@ -21,6 +21,7 @@
     "@fastify/multipart": "^9.0.3",
     "better-sqlite3": "^11.10.0",
     "fastify": "^5.4.0",
+    "uuid": "^11.1.0",
     "zod": "^3.25.73"
   },
   "devDependencies": {
